Questions
Questions Diverses:
-1) Possibilité d'appeler le résultat d'une ligne précédente ?

print(out[37])

---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
~\AppData\Local\Temp\ipykernel_3388\1398233835.py in <module>
      1 print(moduloDec)
----> 2 print(out[37])

NameError: name 'out' is not defined

2) 

nom = input('Quel est votre nom ?')
if len(nom)>0 :
    print('Salut '+ nom+ '!' )
else:
    print('J ai demandé',**'quel est ton nom'**, '?')

  File "C:\Users\ZElion\AppData\Local\Temp\ipykernel_14112\3009291104.py", line 5
    print('J ai demandé',**'quel est ton nom'**, '?')
                                               ^
SyntaxError: invalid syntax

3) Problème import package geometry:

import geometry
car = geometry.carre(4)
tri = geometry.triangle(3, 6, 5)

print(geometry.pi) # -> 3.14159265359

geometry.aire(car) # -> 16

---------------------------------------------------------------------------
ModuleNotFoundError                       Traceback (most recent call last)
~\AppData\Local\Temp\ipykernel_3940\3568522255.py in <module>
----> 1 import geometry.triangle
      2 car = geometry.carre(4)
      3 tri = geometry.triangle(3, 6, 5)
      4 
      5 print(geometry.pi) # -> 3.14159265359

ModuleNotFoundError: No module named 'geometry'

4) 


